y.output

state 0
	$accept: .ltm $end 

	LTM  shift 2
	.  error

	ltm  goto 1

state 1
	$accept:  ltm.$end 

	$end  accept
	.  error


state 2
	ltm:  LTM.IDENT IDENT object 
	ltm:  LTM.IDENT IDENT IDENT object 

	IDENT  shift 3
	.  error


state 3
	ltm:  LTM IDENT.IDENT object 
	ltm:  LTM IDENT.IDENT IDENT object 

	IDENT  shift 4
	.  error


state 4
	ltm:  LTM IDENT IDENT.object 
	ltm:  LTM IDENT IDENT.IDENT object 

	L_BRACE  shift 7
	IDENT  shift 6
	.  error

	object  goto 5

state 5
	ltm:  LTM IDENT IDENT object.    (1)

	.  reduce 1 (src line 57)


state 6
	ltm:  LTM IDENT IDENT IDENT.object 

	L_BRACE  shift 7
	.  error

	object  goto 8

state 7
	object:  L_BRACE.R_BRACE 
	object:  L_BRACE.NEWLINE R_BRACE 
	object:  L_BRACE.NEWLINE members R_BRACE 

	NEWLINE  shift 10
	R_BRACE  shift 9
	.  error


state 8
	ltm:  LTM IDENT IDENT IDENT object.    (2)

	.  reduce 2 (src line 67)


state 9
	object:  L_BRACE R_BRACE.    (3)

	.  reduce 3 (src line 77)


state 10
	object:  L_BRACE NEWLINE.R_BRACE 
	object:  L_BRACE NEWLINE.members R_BRACE 

	R_BRACE  shift 11
	IDENT  shift 14
	.  error

	pair  goto 13
	members  goto 12

state 11
	object:  L_BRACE NEWLINE R_BRACE.    (4)

	.  reduce 4 (src line 82)


state 12
	object:  L_BRACE NEWLINE members.R_BRACE 
	members:  members.pair 

	R_BRACE  shift 15
	IDENT  shift 14
	.  error

	pair  goto 16

state 13
	members:  pair.    (6)

	.  reduce 6 (src line 91)


state 14
	pair:  IDENT.NEWLINE 
	pair:  IDENT.value NEWLINE 
	pair:  IDENT.object NEWLINE 

	NEWLINE  shift 17
	L_BRACE  shift 7
	IDENT  shift 20
	.  error

	object  goto 19
	value  goto 18

state 15
	object:  L_BRACE NEWLINE members R_BRACE.    (5)

	.  reduce 5 (src line 86)


state 16
	members:  members pair.    (7)

	.  reduce 7 (src line 96)


state 17
	pair:  IDENT NEWLINE.    (8)

	.  reduce 8 (src line 101)


state 18
	pair:  IDENT value.NEWLINE 

	NEWLINE  shift 21
	.  error


state 19
	pair:  IDENT object.NEWLINE 

	NEWLINE  shift 22
	.  error


state 20
	value:  IDENT.value 
	value:  IDENT.    (12)

	IDENT  shift 20
	.  reduce 12 (src line 121)

	value  goto 23

state 21
	pair:  IDENT value NEWLINE.    (9)

	.  reduce 9 (src line 106)


state 22
	pair:  IDENT object NEWLINE.    (10)

	.  reduce 10 (src line 110)


state 23
	value:  IDENT value.    (11)

	.  reduce 11 (src line 115)


11 terminals, 6 nonterminals
13 grammar rules, 24/8000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
55 working sets used
memory: parser 9/120000
6 extra closures
18 shift entries, 1 exceptions
9 goto entries
0 entries saved by goto default
Optimizer space used: output 27/120000
27 table entries, 0 zero
maximum spread: 11, maximum offset: 20
